fix ingridients summury overflow

--- a/resources/js/angular/src/app/satisfactory-calculator/components/cards-grid/cards-grid.component.scss
+++ b/resources/js/angular/src/app/satisfactory-calculator/components/cards-grid/cards-grid.component.scss
@@ -91,13 +91,11 @@
             flex-direction: column;
         }
 
-        > * {
-            pointer-events: all;
-        }
-
     }
 
     &-element {
+        
+        pointer-events: all;
         background-color: $overlay-backgrond;
         // background-color: rgba(8, 8, 8, 0.596);
     
@@ -127,10 +125,14 @@
         }
 
         &.summary {
+            overflow-y: scroll;
+
             display: flex;
             flex-direction: column;
-            gap: 1rem;
-            padding: 0.5rem;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
     }
 }
